refactor: DDD 战术落地——打散规则/打分策略领域化 + Music 聚合化
rerank-service：
- Diversifier（纯领域打散规则）+ ExposureStore 端口（Redis 实现在 infrastructure）
- RerankServiceImpl 退化为应用编排

rank-service：
- 打分公式抽为 ScoringPolicy 策略接口 + WeightedLinear 实现（为 A/B 实验预留）
- RankWeights record 承载权重，RankServiceImpl 只做编排与探索保量

behavior-consumer（music 上下文）：
- Bvid 值对象（构造即校验）、Music 聚合工厂 extractedFrom
- MusicApplicationService 承接用例编排；MusicDomainException 领域异常
- 提取入库后发布 MusicExtracted 领域事件到 Kafka（为音乐×推荐联动预留）
- MusicController 退化为协议适配